--- a/index.css
+++ b/index.css
@@ -1,20 +1,6 @@
 body {
-    background-color: #f8f9fa;
-    color: #343a40; 
-    background-image: url('Images\background.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
 .navbar {
@@ -26,33 +12,15 @@ body {
     color: black;
 }
 
+/* Add the sticky property to the navbar */
 .navbar {
     position: sticky;
     top: 0;
 }
 
-.container.text-center {
-    margin-top: 20px; 
-}
-
-h1 {
-    color: #007bff;
-}
-
-.row {
-    margin-bottom: 20px;
-}
-
-img {
-    border-radius: 50%;
-    margin-top: 10px;
-}
-
 .footer {
     background-color: #343a40;
+    color: #fff;
     text-align: center;
-    color: #ffffff;
-    padding: 10px 0;
-    bottom: 0;
-    width: 100%;
+    padding: 10px;
 }
