--- a/index.css
+++ b/index.css
@@ -18,9 +18,29 @@ body {
     top: 0;
 }
 
+.container.text-center {
+    margin-top: 20px; 
+}
+
+h1 {
+    color: #007bff;
+}
+
+.row {
+    margin-bottom: 20px;
+}
+
+img {
+    border-radius: 50%;
+    margin-top: 10px;
+}
+
+
 .footer {
     background-color: #343a40;
     color: #fff;
     text-align: center;
     padding: 10px;
+    bottom: 0;
+    width: 100%;
 }
