--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: #a9b1dd;
 }
 
 .navbar {
@@ -12,7 +13,6 @@ body {
     color: black;
 }
 
-/* Add the sticky property to the navbar */
 .navbar {
     position: sticky;
     top: 0;
