--- a/aboutme.css
+++ b/aboutme.css
@@ -4,10 +4,6 @@ body {
     background-color: #a9b1dd;
 }
 
-.navbar {
-    background-color: #333;
-}
-
 .navbar a:hover {
     background-color: #ddd;
     color: black;
@@ -16,8 +12,8 @@ body {
 .navbar {
     position: sticky;
     top: 0;
+    background-color: #bdbbc7 !important;
 }
-
 .footer {
     background-color: #343a40;
     color: #fff;
